# tensorrt_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: inference.hpp  postprocessor.hpp  preprocessor.hpp
src/: inference.cpp  postprocess.cpp  preprocessor.cpp
tools/: environment copy.sh  environment.sh  run.sh  torch_inference.py
torch_stuff/: output.txt
